# mase

./: .buildinfo  .dockerignore  .envrc  .gitignore  .gitmodules  123.py  Dockerfile.adls  FLEXATTENTION_REPORT.md  FUSED_KERNEL_PROJECT_SPEC.md  Group10_README.md  LICENSE  Makefile  README.md  adls.md  adls_labs_aw924.md  attention_head_test.py  bert-hf-tracer.py  bert-tiny.py  cifar10_predictor_accuracy.ipynb  comparison.md  conftest.py  deit_base_search.py  deit_tiny_gelu_search_results  deit_tiny_gelu_search_results_int_1  deit_tiny_gelu_search_results_int_2  deit_tiny_gelu_search_results_int_3  deit_tiny_layer_norm_search_results  deit_tiny_patch16_224_int_search_results.json  deit_tiny_patch16_224_mxint_search_results.json  deit_tiny_patch16_224_search_results.json  documentation.md  dwn_implementation_plan.md  environment.yml  flake.nix  genindex.html  group3.ipynb  group3.md  index.html  justfile  kan-nas.py  (+47 more)
.bbx/: config.yaml
Docker/: Dockerfile  Dockerfile-kraken
TensorRTDev/: calib-quant-test.ipynb  int8_calibrator.cache
Working_Data/: Question_5b_results.docx  adls_labs_at5424.md  plotting_lab_1.py  plotting_test_3.py  plotting_test_4.py  plotting_test_5a.py  plotting_test_5b.py  plotting_test_6a.py  plotting_test_6b.py  practicle_1.md  temp.md  tutorial_1.mz  tutorial_answers.md  ~$estion_5b_results.docx
_modules/: index.html
_sources/: index.rst  index.rst.txt
a_cx_mxint_quant/: __init__.py  attention_head.py  gelu.py  linear.py  mase_mxint_top_tb.py  mase_utils.py  module_level_tranform.py  modules.py  quantizers.py  softmax.py  utils.py
a_cx_test_files/: 1attention_test.py  2linear_weigth_scatter.py  3intattention.py  4norm.py  Dockerfile-cpu-python13  deit_base.yaml  deit_small.yaml  deit_tiny.yaml  install-pips-python13.sh  install-pkgs-python13.sh  roadmap.drawio  test.tex
acxsearch/: attention_test.py  deit_base_search.py  deit_search.py  deit_small_search.py  deit_tiny_patch16_224_mxint_search_results.json  deit_tiny_search.py  linear_test.sh  main.py  plot.ipynb  plot_func.py  quant_aware_search.py  test.ipynb  test.py  train.py  utils.py
codeowners/: all.json  hardware.json  software.json
coursework-report/: outline-for-report.md  report 2.aux  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
deit_base_saved_results/: attention_exp_search.json  gelu_mxint_clipping_search_new.json  gelu_mxint_search.json  layer_norm_isqrt_search.json  layer_norm_var_search.json
deit_small_saved_results/: attention_exp_search.json  gelu_mxint_clipping_search_new.json  gelu_mxint_search.json  layer_norm_isqrt_search.json  layer_norm_var_search.json
deit_tiny_saved_results/: gelu_mxint_clipping_search.json  gelu_mxint_clipping_search_new.json  gelu_mxint_search.json
dev/: my_newton_raphson_fixed.cpp
docs/: Add-model-to-machop.md  Get-started-on-ee-beholder0-using-Vagrant-hardware.md  Get-started-on-ee-tarrasque-using-Anacoda-software.md  Get-started-on-local-machines-hardware.md  Get-started-on-local-machines-software-only.md  README.md
jobs/: job_wav2vec_full_pipeline.sh  job_wav2vec_full_pipeline_mps_test.sh  job_wav2vec_quick_test.sh  job_wav2vec_script_14.sh  job_wave2vec_pipeline_01.sh  job_wave2vec_script_14.sh
labs/: adls_labs_group_15.md  labs.md  notes.md  tutorial_1.py
machop/: README.md  Reals_quant_self_defined_util.py  Run_TrainingModel.sh  Test_JSC_ByType.py  Test_JSC_byType.py  Test_VGG_Linear_and_Conv.py  Test_byTypes.py  Test_bynames.py  ch  command.txt  environment.yml  gelu_emit.py  graph_rebuild.md  job.psb  lab1.sh  lab1_results.txt  lab4-hardware.ipynb  logicnets.sh  lutnet.sh  model.trt  optuna.md  path  proxy_scores.json  prune_try.py  requirements.txt  run_nerf.sh  run_the_project.md  selu_emit.py  softplus_emit.py  softsign_emit.py  tanh_emit.py  testing.py  vivado.jou  vivado_pid88786.str  zero_cost.md
markdown_files/: Zero-cost-NAS_in_MASE.md  proxies_calculation.md  run_the_project.md  zero_cost_whole.md
modules/: chop.html  (+7 more)
src/mase_hls/: CMakeLists.txt
src/mase_hls/aie/: mm.py  run.sh
src/mase_hls/include/mase/mlir/: CMakeLists.txt
src/mase_hls/include/mase/mlir/Transform/: MaseTransforms.h  Passes.td
src/mase_hls/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
src/mase_hls/test/mlir/Transform/: emit-hls.mlir  tensor_to_memref.mlir
src/mase_hls/tools/: CMakeLists.txt
src/mase_hls/tools/mase-opt/: CMakeLists.txt
(+6060 files in other folders)
